# sheetkit

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.ko.md  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  typedoc.json
.agents/skills/release/: SKILL.md
.claude/skills/release/: SKILL.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  docs.yml  release.yml
benchmarks/: COMPARISON.md  FIXTURES.md
benchmarks/node/: .gitignore  RESULTS.md  bench-baseline.mjs  bench-baseline.ts  benchmark.ts  generate-fixtures.ts  package.json
benchmarks/rust/: Cargo.toml  RESULTS.md
benchmarks/rust-comparison/: Cargo.toml  RESULTS.md
benchmarks/rust-comparison/src/: main.rs
benchmarks/rust/src/: main.rs
crates/sheetkit/: Cargo.toml
crates/sheetkit-core/: Cargo.toml
crates/sheetkit-core/benches/: open_modes.rs
crates/sheetkit-core/src/: cell.rs  cell_ref_shift.rs  chart.rs  col.rs  comment.rs  conditional.rs  control.rs  defined_names.rs  doc_props.rs  error.rs  hyperlink.rs  image.rs  lib.rs  merge.rs  numfmt.rs  page_layout.rs  pivot.rs  protection.rs  raw_transfer.rs  raw_transfer_v2.rs  raw_transfer_write.rs  render.rs  rich_text.rs  row.rs  shape.rs  sheet.rs  slicer.rs  sparkline.rs  sst.rs  stream.rs  stream_reader.rs  style.rs  table.rs  theme.rs  threaded_comment.rs  validation.rs  vba.rs  vml.rs  workbook.rs  workbook_paths.rs
crates/sheetkit-core/src/crypt/: agile.rs  cfb_io.rs  mod.rs  standard.rs
crates/sheetkit-core/src/formula/: ast.rs  eval.rs  mod.rs  parser.rs
crates/sheetkit-core/src/formula/functions/: date_time.rs  engineering.rs  financial.rs  information.rs  logical.rs  lookup.rs  math.rs  mod.rs  statistical.rs  text.rs
crates/sheetkit-core/src/utils/: cell_ref.rs  constants.rs  mod.rs
crates/sheetkit-core/src/workbook/: aux.rs  aux_parts.rs  cell_ops.rs  data.rs  drawing.rs  features.rs  io.rs  mod.rs  open_options.rs  sheet_ops.rs  source.rs
crates/sheetkit-xml/: Cargo.toml
crates/sheetkit-xml/src/: chart.rs  comments.rs  content_types.rs  doc_props.rs  drawing.rs  lib.rs  namespaces.rs  pivot_cache.rs  pivot_table.rs  relationships.rs  shared_strings.rs  slicer.rs  sparkline.rs  styles.rs  table.rs  theme.rs  threaded_comment.rs  workbook.rs  worksheet.rs
crates/sheetkit/src/: lib.rs
crates/sheetkit/tests/: cli_tests.rs  integration.rs
docs/: FEATURE_GAP_ANALYSIS.md  architecture.md  contributing.md  getting-started.md  guide-en.md  index.md  performance.md
docs/.vitepress/: config.mts
docs/.vitepress/config/: en.mts  ko.mts  shared.mts
docs/.vitepress/theme/: custom.css
docs/api-reference/: advanced.md  cell.md  chart.md  data-features.md  form-control.md  image.md  index.md  row-column.md  shape.md  sheet.md  style.md  workbook.md
docs/en/: api-reference.md  architecture.md  contributing.md  getting-started.md  guide.md
docs/en/api-reference/: advanced.md  cell.md  chart.md  data-features.md  image.md  index.md  sheet.md  slicer.md  style.md  workbook.md
docs/en/guide/: advanced.md  basic-operations.md  data-features.md  index.md
docs/guide/: advanced.md  basic-operations.md  cli.md  index.md  migration-async-first.md  rendering.md  styling.md
docs/ko/: api-reference.md  architecture.md  contributing.md  getting-started.md  guide.md  index.md  performance.md
docs/ko/api-reference/: advanced.md  cell.md  chart.md  data-features.md  form-control.md  image.md  index.md  row-column.md  shape.md  sheet.md  slicer.md  style.md  workbook.md
docs/ko/guide/: advanced.md  basic-operations.md  cli.md  data-features.md  index.md  migration-async-first.md  rendering.md  styling.md
examples/node/: index.ts  package.json
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
scripts/: build-docs.sh
