[workspace]
resolver = "2"
members = [
    "crates/sheetkit-xml",
    "crates/sheetkit-core",
    "crates/sheetkit",
    "packages/sheetkit",
    "examples/rust",
    "benchmarks/rust",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nebu1eto/sheetkit"
homepage = "https://github.com/Nebu1eto/sheetkit"
keywords = ["excel", "xlsx", "spreadsheet", "ooxml"]
categories = ["parser-implementations", "encoding"]

[workspace.dependencies]
sheetkit-xml = { version = "0.4.0", path = "crates/sheetkit-xml" }
sheetkit-core = { version = "0.4.0", path = "crates/sheetkit-core" }
quick-xml = { version = "0.36", features = ["serialize", "overlapped-lists"] }
serde = { version = "1.0", features = ["derive"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
dashmap = "6"
rayon = "1.10"
nom = "7.1"
tempfile = "3.10"
pretty_assertions = "1.4"

# Encryption
aes = "0.8"
cbc = "0.1"
ecb = "0.1"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
cfb = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
