[package]
name = "sheetkit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for reading and writing Excel (.xlsx) files"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
sheetkit-xml = { workspace = true }
zip = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
nom = { workspace = true }
uuid = { workspace = true }

# Encryption (optional, behind "encryption" feature)
aes = { workspace = true, optional = true }
cbc = { workspace = true, optional = true }
ecb = { workspace = true, optional = true }
sha1 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
cfb = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

[features]
encryption = ["aes", "cbc", "ecb", "sha1", "sha2", "hmac", "rand", "cfb", "base64"]

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
