[package]
name = "sheetkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sheetkit-core = { workspace = true }
sheetkit-xml = { workspace = true }

[features]
encryption = ["sheetkit-core/encryption"]

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
